<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:background="@drawable/bg"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/pp"
                android:layout_centerHorizontal="true"
                android:elevation="1dp" tools:targetApi="lollipop"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="85dp"
                    app:contentPaddingTop="15dp"
                    app:contentPaddingRight="15dp"
                    app:contentPaddingLeft="15dp"
                    app:contentPaddingBottom="15dp"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Andy Febrianto"
                            android:textStyle="bold"
                            android:textSize="25dp"
                            android:layout_marginTop="60dp"
                            android:layout_gravity="center_horizontal">
                        </TextView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="ITN Malang"
                            android:textSize="17dp"
                            android:layout_marginTop="10dp"
                            android:layout_gravity="center_horizontal">
                        </TextView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/deskripsi"
                            android:textAlignment="center"
                            android:textSize="18dp"
                            android:textStyle="italic"
                            android:layout_marginTop="20dp"
                            android:layout_gravity="center_horizontal">
                        </TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Palangka Raya, Indonesia"
                            android:textSize="18dp"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:layout_gravity="center_horizontal"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_marginTop="20dp">

                    <LinearLayout
                        android:layout_width="62dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="9.8"
                            android:textStyle="bold"
                            android:textSize="35dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/rating"
                            android:textSize="20dp"/>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="62dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="188"
                            android:textStyle="bold"
                            android:textSize="35dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/project"
                            android:textSize="20dp"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="30dp"
                    android:weightSum="2">

                    <Button
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:textColor="@color/colorAccent"
                        android:background="@drawable/outline"
                        android:text="@string/portfolio"/>

                    <Button
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:textColor="@color/SolidCircle"
                        android:background="@drawable/outline1"
                        android:text="@string/hereme"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>